infra/kustomize/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharingan-neg
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"sharingan"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: sharingan
