infra/kustomize/gke/network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sharingan-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: sharingan-cert
    kubernetes.io/ingress.global-static-ip-name: sharingan-ingress
    networking.gke.io/v1beta1.FrontendConfig: sharingan-ingress-security-config
spec:
  defaultBackend:
    service:
      name: sharingan-neg
      port:
        number: 80
